[package]
name = "twitch-oauth"
version = "0.1.0"
authors = ["Shempignon <nicolas@pointndots.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }