[package]
name = "twitch-oauth"
version = "0.1.0"
authors = ["Shempignon <nicolas@pointndots.com>"]
edition = "2018"
documentation = "https://docs.rs/twitch-oauth/"
readme = "README.md"
repository = "https://github.com/shempignon/twitch-oauth"
keywords = ["api", "oauth", "twitch"]
license = "MIT"
description = "Rust crate to request twitch authentication token"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
